# vostok

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
.github/actions/setup-vostok/: action.yml
.github/workflows/: dev-validation.yml  feature-check.yml  quality-check-clean.yml  quality-check.yml
exemples/: CMakeLists.txt
exemples/hello_cube/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
exemples/hello_cube/components/: cube_component.hpp
exemples/hello_cube/shaders/: CMakeLists.txt  cube.frag  cube.vert
exemples/hello_cube/systems/: cube_render_system.cpp  cube_render_system.hpp
exemples/hello_triangle/: CMakeLists.txt  CmakeLists.txt  main.cpp
exemples/hello_triangle/shaders/: CMakeLists.txt  triangle.frag  triangle.vert
include/vostok/core/: type.hpp  version.hpp
include/vostok/core/logger/: logger.hpp  logger.inl
include/vostok/core/profiler/: profiler.hpp
include/vostok/ecs/: ecs.hpp
include/vostok/ecs/components/: transform_component.hpp
include/vostok/ecs/systems/: systeme.hpp
include/vostok/graphics/: buffer.hpp  cameras.hpp  frame_result.hpp  gpu.hpp  gpu_device.hpp  mesh.hpp  pipeline.hpp  vertex_types.hpp
include/vostok/graphics/backends/vulkan/: vulkan_bindless_manager.hpp  vulkan_gpu.hpp  vulkan_pipeline.hpp
include/vostok/graphics/backends/vulkan/buffers/: vulkan_image.hpp  vulkan_sampler.hpp
include/vostok/graphics/backends/vulkan/core/: vulkan_allocator.hpp  vulkan_device.hpp  vulkan_frame_sync.hpp  vulkan_instance.hpp  vulkan_physical_device.hpp  vulkan_swapchain.hpp
include/vostok/graphics/backends/vulkan/platform/: glfw_platform.hpp  platform_interface.hpp
include/vostok/graphics/backends/vulkan/resources/: vulkan_buffer.hpp  vulkan_image.hpp
include/vostok/graphics/backends/vulkan/utils/: vk_tracy_utils.hpp  vk_utils.hpp
include/vostok/graphics/buffers/: bindable_resource.hpp  bindable_resource_ptr.hpp  buffer.hpp  ibo.hpp  image.hpp  ssbo.hpp  texture.hpp  texture_loader.hpp  ubo.hpp  vbo.hpp  vertex_layout.hpp
include/vostok/graphics/camera/: camera.hpp  frustum_camera.hpp  orthographic_camera.hpp  perspective_camera.hpp
include/vostok/graphics/textures/: texture_cache.hpp  texture_loader.hpp  texture_manager.hpp
include/vostok/graphics/vulkan/: vulkan_device.hpp  vulkan_pipeline.hpp
include/vostok/graphics/vulkan/core/: allocator.hpp  command_pool.hpp  device.hpp  frame_sync.hpp  instance.hpp  physical_device.hpp  surface.hpp  swapchain.hpp  vulkan_allocator.hpp  vulkan_command_pool.hpp  vulkan_device.hpp  vulkan_frame_sync.hpp  vulkan_instance.hpp  vulkan_physical_device.hpp  vulkan_surface.hpp  vulkan_swapchain.hpp
include/vostok/graphics/vulkan/platform/: glfw_platform.hpp  platform_interface.hpp
include/vostok/graphics/vulkan/resources/: buffer.hpp  vulkan_buffer.hpp
include/vostok/graphics/vulkan/utils/: vk_logger.hpp  vk_utils.hpp
include/vostok/math/: concepts.hpp  functions.hpp  matrix_ops.hpp  projections.hpp  quaternion_ops.hpp  types.hpp  vector_ops.hpp
include/vostok/utils/colors/: colors.hpp
include/vostok/utils/stl/: optional.hpp  optional.inl
include/vostok/window/: window.hpp  window_config.hpp  window_events.hpp
include/vostok/window/backends/: glfw_window.hpp
shaders/: CMakeLists.txt
src/core/logger/: logger.cpp
src/core/profiler/: profiler.cpp
src/ecs/: ecs.cpp
src/graphics/: gpu.cpp  gpu_device.cpp  mesh.cpp
src/graphics/backends/vulkan/: vulkan_bindless_manager.cpp  vulkan_gpu.cpp  vulkan_pipeline.cpp
src/graphics/backends/vulkan/buffers/: vulkan_buffer.cpp  vulkan_image.cpp  vulkan_sampler.cpp
src/graphics/backends/vulkan/core/: vulkan_allocator.cpp  vulkan_command_pool.cpp  vulkan_device.cpp  vulkan_frame_sync.cpp  vulkan_instance.cpp  vulkan_physical_device.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp
src/graphics/backends/vulkan/platform/: glfw_platform.cpp
src/graphics/backends/vulkan/resources/: vulkan_buffer.cpp  vulkan_image.cpp
src/graphics/backends/vulkan/utils/: vk_utils.cpp
src/graphics/buffers/: texture_loader.cpp  vertex_layout.cpp
src/graphics/camera/: camera.cpp  frustum_camera.cpp  orthographic_camera.cpp  perspective_camera.cpp
src/graphics/textures/: texture_cache.cpp  texture_loader.cpp  texture_manager.cpp
src/graphics/vulkan/: vulkan_device.cpp  vulkan_pipeline.cpp
src/graphics/vulkan/core/: allocator.cpp  command_pool.cpp  device.cpp  frame_sync.cpp  instance.cpp  physical_device.cpp  surface.cpp  swapchain.cpp  vulkan_allocator.cpp  vulkan_command_pool.cpp  vulkan_device.cpp  vulkan_frame_sync.cpp  vulkan_instance.cpp  vulkan_physical_device.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp
src/graphics/vulkan/platform/: glfw_platform.cpp
src/graphics/vulkan/resources/: buffer.cpp  vulkan_buffer.cpp
src/graphics/vulkan/utils/: vk_utils.cpp
src/window/: window.cpp
src/window/backends/: glfw_window.cpp
tests/: CMakeLists.txt
tests/unit/camera/: test_frustum_camera.cpp  test_orthographic_camera.cpp  test_perspective_camera.cpp
